fix: products on safari

--- a/assets/base.css
+++ b/assets/base.css
@@ -1262,6 +1262,7 @@ summary::-webkit-details-marker {
   position: relative;
   overflow: hidden;
   width: 100%;
+  height: 100%;
 }
 
 .media--transparent {
